--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:postgresql://localhost/db_test
-spring.datasource.username=postgres
-spring.datasource.password=
+spring.datasource.url=jdbc:postgresql://localhost:5432/db_springmvcapp
+spring.datasource.username=vinniciusbrusto
+spring.datasource.password=PiF]52KgUkqO
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.show_sql=true
 spring.jpa.hibernate.format_sql=true
