--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/db_springmvcapp
-spring.datasource.username=vinniciusbrusto
-spring.datasource.password=PiF]52KgUkqO
+spring.datasource.url=jdbc:postgresql://localhost:5432/database
+spring.datasource.username=postgres
+spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.hibernate.show_sql=true
-spring.jpa.hibernate.format_sql=true
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.use_sql_comments=false
